@startuml
title Figure 2b — Hexagonal architecture — ports and adapters
top to bottom direction
skinparam linetype polyline
skinparam componentStyle rectangle
skinparam nodesep 28
skinparam ranksep 38

rectangle "Customer Care\nOperator" as Operator

package "Driving adapters" {
  component "React operator UI" as UI
  component "HTTP adapter\n+ optional auth boundary" as Http
  UI -[hidden]down-> Http
}

interface "Inbound application use cases\ncustomer review · analysis · history" as Inbound
rectangle "Application core\n\nidentity · customer · risk · analysis\n\nproject-owned domain +\napplication contracts" as Core

interface "CustomerActivityPort" as ActivityPort
interface "PolicyKnowledgePort" as PolicyPort
interface "AnalysisModelPort" as ModelPort
interface "AnalysisHistoryPort" as HistoryPort

ActivityPort -[hidden]down-> PolicyPort
PolicyPort -[hidden]down-> ModelPort
ModelPort -[hidden]down-> HistoryPort

package "Driven adapters" {
  component "SyntheticActivityAdapter\nJdbcCustomerActivityAdapter\n<<GoF Adapter>>" as ActivityAdapters
  component "StaticPolicyAdapter\nPgVectorPolicyAdapter\n<<GoF Adapter>>" as PolicyAdapters
  component "DeterministicAnalysisStub\nSpringAiAnalysisAdapter\n<<GoF Adapter>>" as ModelAdapters
  component "JdbcAnalysisHistoryAdapter\n<<GoF Adapter>>" as HistoryAdapter

  ActivityAdapters -[hidden]down-> PolicyAdapters
  PolicyAdapters -[hidden]down-> ModelAdapters
  ModelAdapters -[hidden]down-> HistoryAdapter
}

rectangle "PostgreSQL + pgvector" as DB
rectangle "External AI provider" as Provider
DB -[hidden]down-> Provider

Operator --> UI
UI --> Http : HTTP/JSON
Http --> Inbound
Inbound --> Core

Core --> ActivityPort
Core --> PolicyPort
Core --> ModelPort
Core --> HistoryPort

ActivityPort --> ActivityAdapters : interchangeable implementations
PolicyPort --> PolicyAdapters : interchangeable implementations
ModelPort --> ModelAdapters : interchangeable implementations
HistoryPort --> HistoryAdapter

ActivityAdapters --> DB : Spring JDBC when relational selected
PolicyAdapters --> DB : JDBC/pgvector when selected
HistoryAdapter --> DB : Spring JDBC
ModelAdapters ..> Provider : HTTPS when live adapter selected

note bottom of Core
  Hexagonal architecture is the architectural style, not a GoF pattern.
  Adapter translates infrastructure/framework APIs to project-owned ports.
  Strategy selects interchangeable implementations behind stable ports.
  Facade/application service exposes coarse-grained orchestration.
end note
@enduml
